@@ -6,6 +6,9 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+  # Travis doesn’t support CPython 3.7 properly for now, see
+  # https://github.com/travis-ci/travis-ci/issues/9815
+  #- "3.7"
   - "pypy"
   - "pypy3"
 branches:
